Use the owner document when compiling event handlers.  Bug 289456, r+sr=jst, a=dbaron